--- a/docs/blockchain/proof-of-coverage/proof-of-coverage.mdx
+++ b/docs/blockchain/proof-of-coverage/proof-of-coverage.mdx
@@ -5,7 +5,6 @@ sidebar_label: Proof of Coverage
 slug: /blockchain/proof-of-coverage
 ---
 
-# Helium Proof of Coverage
 
 The Helium blockchain uses a novel work algorithm called “Proof-of-Coverage”
 (PoC) to verify that Hotspots are located where they claim. Put another way, PoC
@@ -55,7 +54,10 @@ lists, it will not be included in any POC Challenges.
 
 ### Challengers
 
-### Challengees
+## POC Chain Variables
+
+Much of Proof of Coverage is controlled by blockchain chain variables. 
+
 
 ## POCv10 Pass / Fail Parameters
 
@@ -74,3 +76,9 @@ to POC that have been approved by the community and implemented.
 | :--------- | :------------------ | :------------ | :------------- |
 | 01         | Here's a cool thing | Number        | Another Number |
 | 02         | Here's a cool thing | Number        | Another Number |
+
+
+
+
+
+## POC FAQ
