more progress on HNT page

--- a/docs/blockchain/helium-token/helium-token.mdx
+++ b/docs/blockchain/helium-token/helium-token.mdx
@@ -5,4 +5,98 @@ sidebar_label: Helium Token
 slug: /blockchain/helium-token
 ---
 
-The most glorious $HNT.
+# The Helium Token
+
+The Helium Token is the native cryptocurrency and protocol token of the Helium blockchain. Its symbol is `HNT`. The first HNT was produced on July 29th, 2019 at 09:43PM UTC as part of the genesis block that was mined with the Helium Network launch. Prior to this date, there was no premine of `HNT`.
+
+
+:::info
+For statistics on $HNT, [see the Market section on the Helium Explorer](https://explorer.helium.com/market).
+:::
+
+
+## Helium Token Usage
+
+The Helium Token is designed to serve the needs of the two primary parties of the Helium blockchain ecosystem: 
+
+1. **Hotspot Hosts and Network Operators**. Host [mine HNT](/docs/blockchain/mining) while deploying and maintaining network coverage.
+2. **Enterprises and developers using the Helium Network** to connect devices and build applications. Data Credits, which are derived from HNT in a burn transaction, [are used pay transaction fees](/docs/blockchain/transaction-fees) for the data transmissions on the network (in addition to things like adding Hotspots and sending). 
+
+
+## HNT Mining Schedule and Max Supply
+
+Since the [genesis block](https://explorer.helium.com/blocks/1), the Network has mined a target of `5,000,000` HNT per month. And since the [community approval of HIP 20](https://github.com/helium/HIP/issues/73), the Helium blockchain uses a two year halvening schedule, with a maximum supply of 223,000,000 HNT. 
+
+HNT halving happens every two years from the genesis block, on the following schedule. 
+
+:::info
+In the below issuance schedule, year 1 starts on **August 1, 2020**. Therefore the first halving will happen on day one of year three, which is **August 1, 2022**.  
+:::
+
+
+ | Year| HNT at start of year | Total HNT Minted| 
+ |-|-|-|
+ | 1 | 0 | 60,000,000.0 |
+ | 2 | 60,000,000 | 60,000,000.0 | 
+ | 3 | 120,000,000 | 30,000,000.0 |
+ | 4 | 150,000,000 | 30,000,000.0 |
+ | 5 | 180,000,000 | 15,000,000.0 |
+ | 6 | 195,000,000 | 15,000,000.0 |
+ | 7 | 210,000,000 | 7,500,000.0 |
+ | 8 | 217,500,000 | 7,500,000.0 |
+ | 9 | 225,000,000 | 3,750,000.0 |
+ | 10 | 228,750,000 | 3,750,000.0 |
+ | 11 | 232,500,000 | 1,875,000.0 |
+ | 12 | 234,375,000 | 1,875,000.0 |
+ | 13 | 236,250,000 | 937,500.0 |
+ | 14 | 237,187,500 | 937,500.0 |
+ | 15 | 238,125,000 | 468,750.0 |
+ | 16 | 238,593,750 | 468,750.0 |
+ | 17 | 239,062,500 | 234,375.0 |
+ | 18 | 239,296,875 | 234,375.0 |
+ | 19 | 239,531,250 | 117,187.5 |
+ | 20 | 239,648,438 | 117,187.5 |
+ | 21 | 239,765,625 | 58,593.8 |
+ | 22 | 239,824,219 | 58,593.8 |
+ | 23 | 239,882,813 | 29,296.9 |
+ | 24 | 239,912,109 | 29,296.9 |
+ | 25 | 239,941,406 | 14,648.4 |
+ | 26 | 239,956,055 | 14,648.4 |
+ | 27 | 239,970,703 | 7,324.2 |
+ | 28 | 239,978,027 | 7,324.2 |
+ | 29 | 239,985,352 | 3,662.1 |
+ | 30 | 239,989,014 | 3,662.1 |
+ | 31 | 239,992,676 | 1,831.1 |
+ | 32 | 239,994,507 | 1,831.1 |
+ | 33 | 239,996,338 | 915.5 |
+ | 34 | 239,997,253 | 915.5 |
+ | 35 | 239,998,169 | 457.8 |
+ | 36 | 239,998,627 | 457.8 |
+ | 37 | 239,999,084 | 228.9 |
+ | 38 | 239,999,313 | 228.9 |
+ | 39 | 239,999,542 | 114.4 |
+ | 40 | 239,999,657 | 114.4 |
+ | 41 | 239,999,771 | 57.2 |
+ | 42 | 239,999,828 | 57.2 |
+ | 43 | 239,999,886 | 28.6 |
+ | 44 | 239,999,914 | 28.6 |
+ | 45 | 239,999,943 | 14.3 |
+ | 46 | 239,999,957 | 14.3 |
+ | 47 | 239,999,971 | 7.2 |
+ | 48 | 239,999,979 | 7.2 |
+ | 49 | 239,999,986 | 3.6 |
+ | 50 | 239,999,989 | 3.6 |
+
+
+
+
+
+## Net Emissions
+
+
+
+
+
+
+
+
