a few more things

--- a/docs/blockchain/helium-token/helium-token.mdx
+++ b/docs/blockchain/helium-token/helium-token.mdx
@@ -23,9 +23,11 @@ The Helium Token is designed to serve the needs of the two primary parties of th
 2. **Enterprises and developers using the Helium Network** to connect devices and build applications. Data Credits, which are derived from HNT in a burn transaction, [are used pay transaction fees](/docs/blockchain/transaction-fees) for the data transmissions on the network (in addition to things like adding Hotspots and sending). 
 
 
-## HNT Mining Schedule and Max Supply
+## HNT Token Economic Concepts
 
-Since the [genesis block](https://explorer.helium.com/blocks/1), the Network has mined a target of `5,000,000` HNT per month. And since the [community approval of HIP 20](https://github.com/helium/HIP/issues/73), the Helium blockchain uses a two year halvening schedule, with a maximum supply of 223,000,000 HNT. 
+### Halvenings and Max Supply
+
+Since the [genesis block](https://explorer.helium.com/blocks/1), the Network has mined a target of `5,000,000` HNT per month. And since the [community approval of HIP 20](https://github.com/helium/HIP/issues/73), the Helium blockchain uses a two year halving schedule, with a maximum supply of `223,000,000` HNT. 
 
 HNT halving happens every two years from the genesis block, on the following schedule. 
 
@@ -88,10 +90,14 @@ In the below issuance schedule, year 1 starts on **August 1, 2020**. Therefore t
  | 50 | 239,999,989 | 3.6 |
 
 
+:::important
+While the above schedule will states approximately `240,000,000` HNT will be produced, year one of the blockchain only produced around `43,000,000` of the target `60,000,000` due to some slow block times. So the actual maximum supply is `223,000,000` HNT. 
+:::
 
 
+### Burn and Mint Equilibrium
 
-## Net Emissions
+### Net Emissions
 
 
 
