adeunis mapper fixes

--- a/docs/use-the-network/coverage-mapping/adeunis-mapper.mdx
+++ b/docs/use-the-network/coverage-mapping/adeunis-mapper.mdx
@@ -93,10 +93,10 @@ Push Button 2
 GPS Screen
 
 Once you have navigated to the GPS screen you'll next be monitoring this screen
-to validate that the device has a sufficient GPS fix\(enough satellites are
-visible to accurately calculate its position and time\). Make sure the device is
+to validate that the device has a sufficient GPS fix (enough satellites are
+visible to accurately calculate its position and time). Make sure the device is
 located in a place where a good amount of the sky is visible. Once your device
-obtains a fix, this may take a few minutes, you will see a latitude and
+obtains a fix (this may take a few minutes), you will see a latitude and
 longitude show as well as how many satellites are visible. It's best if six or
 more satellites are visible. You can now navigate to the Packet Count screen by
 again pressing the same _Push Button 2_, once if the display backlight is on,
