coverage mapping fixes

--- a/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
+++ b/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
@@ -9,14 +9,10 @@ slug: /use-the-network/coverage-mapping
 
 Helium recently began an effort to collect device data for the purpose of
 coverage mapping from voluntary community contributors. Mapping data is viewable
-at [mappers.helium.com](https://mappers.helium.com/). Anyone can contribute to
-this project by sending device uplinks with the required geographical data to
-the [Mappers API](/docs/use-the-network/coverage-mapping/mappers-api). For a step by step guide on setting an
-integration in Console see the
-[Mappers Quickstart](/docs/use-the-network/coverage-mapping/mappers-quickstart).
+at [mappers.helium.com](https://mappers.helium.com/). 
 
-[Mappers API](/docs/use-the-network/coverage-mapping/mappers-api).
-
-[Mappers Data](/docs/use-the-network/coverage-mapping/mappers-data).
-
-[Adeunis Mapper Instructions](/docs/use-the-network/coverage-mapping/adeunis-mapper).
+## Go Deeper with Coverage Mapping
+* Read the step-by-step [Mappers Quickstart](/docs/use-the-network/coverage-mapping/mappers-quickstart)
+* Learn more about the [Mappers API](/docs/use-the-network/coverage-mapping/mappers-api)
+* Get some [Mappers Data](/docs/use-the-network/coverage-mapping/mappers-data)
+* Deploy the [Adeunis Mapper](/docs/use-the-network/coverage-mapping/adeunis-mapper)
