--- a/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
+++ b/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
@@ -11,6 +11,10 @@ Helium recently began an effort to collect device data for the purpose of
 coverage mapping from voluntary community contributors. Mapping data is viewable
 at [mappers.helium.com](https://mappers.helium.com/). 
 
+:::info
+Join the discussion in the dedicated #coverage-mapping channel on the [Helium Discord Server](https://discord.gg/helium).
+:::
+
 ## Go Deeper with Coverage Mapping
 * Read the step-by-step [Mappers Quickstart](/docs/use-the-network/coverage-mapping/mappers-quickstart)
 * Learn more about the [Mappers API](/docs/use-the-network/coverage-mapping/mappers-api)
