--- a/docs/blockchain/helium-token/helium-token.mdx
+++ b/docs/blockchain/helium-token/helium-token.mdx
@@ -20,14 +20,16 @@ For statistics on $HNT, [see the Market section on the Helium Explorer](https://
 The Helium Token is designed to serve the needs of the two primary parties of the Helium blockchain ecosystem: 
 
 1. **Hotspot Hosts and Network Operators**. Host [mine HNT](/docs/blockchain/mining) while deploying and maintaining network coverage.
-2. **Enterprises and developers using the Helium Network** to connect devices and build applications. Data Credits, which are derived from HNT in a burn transaction, [are used pay transaction fees](/docs/blockchain/transaction-fees) for the data transmissions on the network (in addition to things like adding Hotspots and sending). 
+2. **Enterprises and developers using the Helium Network** to connect devices and build applications. Data Credits, which are a $USD-pegged utility token derived from HNT in a burn transaction, [are used pay transaction fees](/docs/blockchain/transaction-fees) for the data transmissions on the network (in addition to things like adding Hotspots and sending). 
 
 
 ## HNT Token Economic Concepts
 
-### Halvenings and Max Supply
+The Helium blockchain uses three distinct token economic concepts to ensure HNT supply is both plentiful for network needs but also relatively scarce, with a known maximum. Let's take a look at them in some detail.
 
-Since the [genesis block](https://explorer.helium.com/blocks/1), the Network has mined a target of `5,000,000` HNT per month. And since the [community approval of HIP 20](https://github.com/helium/HIP/issues/73), the Helium blockchain uses a two year halving schedule, with a maximum supply of `223,000,000` HNT. 
+### Max Supply
+
+Since the Helium [genesis block](https://explorer.helium.com/blocks/1), the Network has mined a target of `5,000,000` HNT per month. And since the [community approval of HIP 20](https://github.com/helium/HIP/issues/73), the Helium blockchain uses a two year halving schedule, with a maximum supply of `223,000,000` HNT. 
 
 HNT halving happens every two years from the genesis block, on the following schedule. 
 
@@ -36,8 +38,8 @@ In the below issuance schedule, year 1 starts on **August 1, 2020**. Therefore t
 :::
 
 
- | Year| HNT at start of year | Total HNT Minted| 
- |-|-|-|
+ |Year| HNT at start of year | Total HNT Minted| 
+ | :------------------------------ | :--------------------------------------------------------------------------------------------------------------------------- | :------------ |
  | 1 | 0 | 60,000,000.0 |
  | 2 | 60,000,000 | 60,000,000.0 | 
  | 3 | 120,000,000 | 30,000,000.0 |
@@ -95,9 +97,50 @@ While the above schedule will states approximately `240,000,000` HNT will be pro
 :::
 
 
-### Burn and Mint Equilibrium
+### Data Credits and Burn and Mint
+
+As noted above, **Data Credits** are a $USD-pegged utility token derived from HNT in a burn transaction and used to pay [all transaction fees](/docs/blockchain/transaction-fees) on the Helium Network. One Data Credit will always cost `$0.00001`. Or, `$1.00` will always buy you `100,000` Data Credits. But, as noted above, Data Credits are produced by burning $HNT. And the market price of HNT will of course fluctuate.  
+
+This HNT to DC relationship is based on a design commonly called a “[burn and mint equilibrium](https://multicoin.capital/2018/02/13/new-models-utility-tokens/)” and is intended to allow for the supply of HNT to respond to network usage trends such that, when equilibrium is found, the amount of HNT that exists remains static month on month. (Helium borrowed heavily from Factom’s usage of this design though other blockchains have also used it.) The amount of Data Credits produced by burning $HNT will move up and down based on the $USD price of HNT as reported by the [HNT Oracles](/docs/blockchain/oracles). Let's look at a few examples of how this works on-chain. 
+
+**Example 1**
+* As always, the price of one DC is `$.00001`
+* The current HNT Oracle price is `$1`
+* Burning `1` HNT would produce `100,000` DCs
+
+**Example 2**
+
+A Helium Network user requires `50,000` DCs per month to send data for their fleet of Helium-connected Mouse traps. To acquire these 50,000 DCs per month, they would burn .5 HNT using the following math:
+
+* Again, the price of DC is `$.00001`
+* The current HNT Oracle price is `$1`
+* Burning `.5` HNT would produce the needed `50,000` DCs
+
+
+:::important
+Once burned, DCs are owned by the Helium wallet specified in the burn transaction. They are non-transferrable and can only be used by the wallet owner. 
+:::
+
 
 ### Net Emissions
+
+At this point, the astute reader might be asking themselves the following question: 
+
+>
+If HNT supply is capped at 223,000,000 AND the Network is constantly burning HNT to mint Data Credits to enable transactions, won't we run out of HNT? 
+>
+
+**Yes.** This is where the idea of Net Emissions comes in. Along with with Max Supply, [HIP 20](https://github.com/helium/HIP/issues/73) also introduced the idea of Net Emissions. The [complete Net Emissions discussion in the HIP](https://github.com/helium/HIP/blob/master/0020-hnt-max-supply.md#net-emissions) is the best resource on this, but we'll provide a quick summary here:
+
+* In its simplest implementation, the blockchain would monitor how many HNT were burnt for Data Credits that epoch and adds them to the number of HNT to be minted that epoch. So in this simple implementation, if 10 HNT were burned for Data Credits in an epoch, the system would mint 3,434 HNT instead of 3,424 HNT.
+* 
+* 
+
+
+
+
+
+
 
 
 
