--- a/docs/mine-hnt/build-a-gateway/build-a-gateway.mdx
+++ b/docs/mine-hnt/build-a-gateway/build-a-gateway.mdx
@@ -158,7 +158,7 @@ PLACEHOLDER
 
 ### Connecting to a Miner
 
-Before proceeding, you want to make sure that [you have a Miner running](mine-hnt/run-a-miner). If the Miner is running on the Raspberry Pi already and is properly mapped to port 1680, then there's nothing to do! Otherwise, read on.
+Before proceeding, you want to make sure that [you have a Miner running](/docs/mine-hnt/run-a-miner). If the Miner is running on the Raspberry Pi already and is properly mapped to port 1680, then there's nothing to do! Otherwise, read on.
 
 With your favorite editor, open `global_conf.json` that lives in the packet forwader directory:
 
