--- a/docs/mine-hnt/build-a-gateway/build-a-gateway.mdx
+++ b/docs/mine-hnt/build-a-gateway/build-a-gateway.mdx
@@ -27,9 +27,10 @@ To be a Helium Miner, there are three principle components to know about
   component is interested in receiving the packets relating to its devices and
   handles downlink responses when appropriate
 
-When you buy [a prebuilt Hotspot](/docs/mine-hnt/prebuilt-hotspots), you are buying a
-Packet Forwarder and a Miner in a convenient package. Everything is ready to go
-from the moment you plug it in and the device is kept up to date by Helium, Inc.
+When you buy [a prebuilt Hotspot](/docs/mine-hnt/prebuilt-hotspots), you are
+buying a Packet Forwarder and a Miner in a convenient package. Everything is
+ready to go from the moment you plug it in and the device is kept up to date by
+Helium, Inc.
 
 However, any device that can run an 8 channel LoRa front-end (such as SX1301 or
 SX1302) can be used to participate in the Helium Network. The Miner is designed
@@ -58,9 +59,11 @@ running the latest
 [64-bit RaspiOS](https://downloads.raspberrypi.org/raspios_arm64/images/) image.
 
 We recommend this configuration in particular if you are interested in running
-the Miner on the gateway itself; it's easy to run [our Docker image from Quay](https://quay.io/repository/team-helium/miner)
-on a 64-bit ARM system. If you choose to run the Miner elsewhere, it's possible to downgrade all the way to a Pi0, for example, since you will only be
-running the packet forwarder on the gateway.
+the Miner on the gateway itself; it's easy to run
+[our Docker image from Quay](https://quay.io/repository/team-helium/miner) on a
+64-bit ARM system. If you choose to run the Miner elsewhere, it's possible to
+downgrade all the way to a Pi0, for example, since you will only be running the
+packet forwarder on the gateway.
 
 RAK Wireless sells multiple "Pi Hats" that provide the 8-channel front-end:
 
@@ -74,12 +77,13 @@ line where they provide bundles:
 - the D3/D3+/D4/D4+/D4P are all based off of the RAK2245
 - the D4H is based off of the RAK2245
 
-Ultimately, which configuration works for you depends on your situation, but all of them will work with this guide with little adjustment.
+Ultimately, which configuration works for you depends on your situation, but all
+of them will work with this guide with little adjustment.
 
 ### Preparing the SD Card
 
-You can create an SD card from this image by looking for the recently inserted SD
-card in your system
+You can create an SD card from this image by looking for the recently inserted
+SD card in your system
 
 ```
 $ ls -al /dev | grep sd
@@ -92,30 +96,31 @@ write the image to the SD card. For example:
 dd if=~/2020-08-20-raspios-buster-arm64.img of=/dev/sdX bs=1M
 ```
 
-Use the command `sync` to make sure the filesystem is written before trying to remove
-the SD card. Once the `sync` command returns, you can eject and remove the SD card from your system.
-
+Use the command `sync` to make sure the filesystem is written before trying to
+remove the SD card. Once the `sync` command returns, you can eject and remove
+the SD card from your system.
 
 ### Preparing RaspiOS
 
-With a keyboard, mouse, and monitor plugged in, power on the Raspberry Pi. Proceed through the
-guided RaspiOS setup where you will update your password, configure your WiFi, etc.
+With a keyboard, mouse, and monitor plugged in, power on the Raspberry Pi.
+Proceed through the guided RaspiOS setup where you will update your password,
+configure your WiFi, etc.
 
-Enable SPI and I2C using the raspi-config tool:
-```sudo raspi-config```
+Enable SPI and I2C using the raspi-config tool: `sudo raspi-config`
 
-Select `Interface Options`, and enable `I2C` and `SPI` from within the
-menu system. This is also a good time to enable SSH if you want it.
+Select `Interface Options`, and enable `I2C` and `SPI` from within the menu
+system. This is also a good time to enable SSH if you want it.
 
 ### Installing the Semtech Packet Forwarder
 
-Depending on which SX130x radio you are running, you will want to select the appropriate packet forwarder application.
+Depending on which SX130x radio you are running, you will want to select the
+appropriate packet forwarder application.
 
 #### Packet Forwarder SX1302
 
 Pull down Helium's fork of the SX1302 packet forwarder:
 
-```git clone https://github.com/helium/sx1302_hal.git```
+`git clone https://github.com/helium/sx1302_hal.git`
 
 Go into the directory and build:
 
@@ -124,14 +129,16 @@ $ cd sx1302_hal
 $ make
 ```
 
-Next, go into the the packet_forwarder directory, where we will create a link to the reset script:
+Next, go into the the packet_forwarder directory, where we will create a link to
+the reset script:
 
 ```
 $ cd packet_forwarder
 $ ln -s ../tools/reset_lgw.sh reset_lgw.sh
 ```
 
-We will also create a link to the appropriate regional configuration. For example:
+We will also create a link to the appropriate regional configuration. For
+example:
 
 ```
 ln -s global_conf.json.sx1250.US915 global_conf.json
@@ -158,17 +165,23 @@ PLACEHOLDER
 
 ### Connecting to a Miner
 
-Before proceeding, you want to make sure that [you have a Miner running](/docs/mine-hnt/run-a-miner). If the Miner is running on the Raspberry Pi already and is properly mapped to port 1680, then there's nothing to do! Otherwise, read on.
+Before proceeding, you want to make sure that
+[you have a Miner running](/docs/mine-hnt/run-a-miner). If the Miner is running
+on the Raspberry Pi already and is properly mapped to port 1680, then there's
+nothing to do! Otherwise, read on.
 
-With your favorite editor, open `global_conf.json` that lives in the packet forwader directory:
+With your favorite editor, open `global_conf.json` that lives in the packet
+forwader directory:
 
 ```
 nano ~/sx1302_hal/lora_pkt_fwd/global_conf.json
 ```
 
-You want to change the field "server_address" from "localhost" the the IP address of the server, so in this case:
+You want to change the field "server_address" from "localhost" the the IP
+address of the server, so in this case:
 
-You'll need to restart the packet forwarder for the configuration change to take effect.
+You'll need to restart the packet forwarder for the configuration change to take
+effect.
 
 To verify that things are working, you can follow the logs on your miner. eg:
 
@@ -176,4 +189,5 @@ To verify that things are working, you can follow the logs on your miner. eg:
 docker exec miner tail -f /var/log/miner/console.log | grep lora
 ```
 
-At the very least, you should see PULL_DATA messages every few seconds. If so, then you've done it!
+At the very least, you should see PULL_DATA messages every few seconds. If so,
+then you've done it!
