--- a/api/console.mdx
+++ b/api/console.mdx
@@ -4,12 +4,15 @@ hide_title: true
 sidebar_label: Console
 slug: /console
 ---
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
+
+import Tabs from "@theme/Tabs";
+import TabItem from "@theme/TabItem";
 
 ## Console API
 
-The Console API is a set of HTTP Request that allows you to programatically interact with Console. It's the lowest level building block and is ideal for integrating with back-end services, for example.
+The Console API is a set of HTTP Request that allows you to programatically
+interact with Console. It's the lowest level building block and is ideal for
+integrating with back-end services, for example.
 
 ### Base URL
 
@@ -19,15 +22,22 @@ https://console.helium.com/api
 
 ### Authentication
 
-All Console API requests require an API Key which provides access to devices owned by the **organization** which owns the device. Devices are never associated to a single user, but instead to an organization.
+All Console API requests require an API Key which provides access to devices
+owned by the **organization** which owns the device. Devices are never
+associated to a single user, but instead to an organization.
 
-To create an account key, go to your [profile](https://console.helium.com/profile) on Helium Console. From the top right corner, click: `Account -> Profile`.
+To create an account key, go to your
+[profile](https://console.helium.com/profile) on Helium Console. From the top
+right corner, click: `Account -> Profile`.
 
-From there, you may generate a key for your organization. _The key will only display once._
+From there, you may generate a key for your organization. _The key will only
+display once._
 
-**You must confirm the API key** creation by clicking a link that is emailed to the account that created the API key.
+**You must confirm the API key** creation by clicking a link that is emailed to
+the account that created the API key.
 
-From then on, you will want to include the API key in all of your API requests. You do this by placing your API key in an HTTP header field called "key.
+From then on, you will want to include the API key in all of your API requests.
+You do this by placing your API key in an HTTP header field called "key.
 
 ---
 
@@ -63,6 +73,7 @@ GET https://console.helium.com/api/v1/devices
     },
 ]
 ```
+
 ---
 
 ### Devices by AppEui, AppKey, DevEui
@@ -70,6 +81,7 @@ GET https://console.helium.com/api/v1/devices
 ```
 GET https://console.helium.com/api/v1/devices?app_eui={app_eui}&app_key={app_key}&dev_eui={dev_eui}
 ```
+
 Returns a device descriptor if device is found.
 
 <Tabs
@@ -78,18 +90,18 @@ Returns a device descriptor if device is found.
   values={[{"label":"Request","value":"request"},{"label":"Response","value":"response"}]}>
 <TabItem value="request">
 
-_Path Parameters_ 
+_Path Parameters_
 
-| Parameter Name | Type      | Description     |
-| -------- | --------- | ---------- |
-| dev_eui (required)  | _string_ | LoRaWAN Device EUI uniquely identifies a device |  
-| app_eui (required) | _string_ | LoRaWAN App EUI uniquely identifies the application of the device | 
-| app_key (required) | _string_ | LoRaWAN App Key is a shared secret key which is used to derive secure sessions via the Join mechanism | 
+| Parameter Name     | Type     | Description                                                                                           |
+| ------------------ | -------- | ----------------------------------------------------------------------------------------------------- |
+| dev_eui (required) | _string_ | LoRaWAN Device EUI uniquely identifies a device                                                       |
+| app_eui (required) | _string_ | LoRaWAN App EUI uniquely identifies the application of the device                                     |
+| app_key (required) | _string_ | LoRaWAN App Key is a shared secret key which is used to derive secure sessions via the Join mechanism |
 
 </TabItem>
 <TabItem value="response">
 
-```json 
+```json
 Device {
     app_eui: "70B3D57ED0008E64",
     app_key: "30EACA8A2CAF0C5315D0E4A1B7F7B55B",
@@ -111,6 +123,7 @@ Device {
 ```
 GET https://console.helium.com/api/v1/devices/:device_id
 ```
+
 Returns a device descriptor if device is found..
 
 <Tabs
@@ -119,16 +132,16 @@ Returns a device descriptor if device is found..
   values={[{"label":"Request","value":"request"},{"label":"Response","value":"response"}]}>
 <TabItem value="request">
 
-_Path Parameters_ 
+_Path Parameters_
 
-| Parameter Name | Type      | Description     |
-| -------- | --------- | ---------- |
-| id (required)  | _string_ | UUID of the device |  
+| Parameter Name | Type     | Description        |
+| -------------- | -------- | ------------------ |
+| id (required)  | _string_ | UUID of the device |
 
 </TabItem>
 <TabItem value="response">
 
-```json 
+```json
 Device {
     app_eui: "70B3D57ED0008E64",
     app_key: "30EACA8A2CAF0C5315D0E4A1B7F7B55B",
@@ -150,7 +163,9 @@ Device {
 ```
 POST https://console.helium.com/api/v1/devices
 ```
-Creates a device with corresponding name, Application EUI, Application Key, and Device EUI.
+
+Creates a device with corresponding name, Application EUI, Application Key, and
+Device EUI.
 
 <Tabs
   block={true}
@@ -158,14 +173,14 @@ Creates a device with corresponding name, Application EUI, Application Key, and 
   values={[{"label":"Request","value":"request"},{"label":"Response","value":"response"}]}>
 <TabItem value="request">
 
-_Body Parameters_ 
+_Body Parameters_
 
-| Parameter Name | Type      | Description     |
-| -------- | --------- | ---------- |
-| name (required)  | _string_ | A human-friendly name for the device | 
-| app_eui (required)  | _string_ | LoRaWAN Application EUI |  
-| app_key (required)  | _string_ | LoRaWAN Application Key |  
-| dev_eui (required)  | _string_ | LoRaWAN Device EUI |  
+| Parameter Name     | Type     | Description                          |
+| ------------------ | -------- | ------------------------------------ |
+| name (required)    | _string_ | A human-friendly name for the device |
+| app_eui (required) | _string_ | LoRaWAN Application EUI              |
+| app_key (required) | _string_ | LoRaWAN Application Key              |
+| dev_eui (required) | _string_ | LoRaWAN Device EUI                   |
 
 </TabItem>
 <TabItem value="response">
@@ -173,7 +188,7 @@ _Body Parameters_
 200: OK
 
 ```
- 
+
 ```
 
 </TabItem>
@@ -186,6 +201,7 @@ _Body Parameters_
 ```
 DELETE https://console.helium.com/api/v1/devices/:id
 ```
+
 Deletes device record by UUID.
 
 <Tabs
@@ -194,11 +210,11 @@ Deletes device record by UUID.
   values={[{"label":"Request","value":"request"},{"label":"Response","value":"response"}]}>
 <TabItem value="request">
 
-_Path Parameters_ 
+_Path Parameters_
 
-| Parameter Name | Type      | Description     |
-| -------- | --------- | ---------- |
-| id (required)  | _string_ | UUID of the device to be deleted | 
+| Parameter Name | Type     | Description                      |
+| -------------- | -------- | -------------------------------- |
+| id (required)  | _string_ | UUID of the device to be deleted |
 
 </TabItem>
 <TabItem value="response">
@@ -219,6 +235,7 @@ Device deleted
 ```
 GET https://console.helium.com/api/v1/labels
 ```
+
 Returns a list of label descriptors associated with the organization.
 
 ##### Response
@@ -245,6 +262,7 @@ Returns a list of label descriptors associated with the organization.
     },
 ]
 ```
+
 ---
 
 ### Create Label
@@ -252,6 +270,7 @@ Returns a list of label descriptors associated with the organization.
 ```
 POST https://console.helium.com/api/v1/labels
 ```
+
 Create a new label with the given name.
 
 <Tabs
@@ -260,11 +279,11 @@ Create a new label with the given name.
   values={[{"label":"Request","value":"request"},{"label":"Response","value":"response"}]}>
 <TabItem value="request">
 
-_Body Parameters_ 
+_Body Parameters_
 
-| Parameter Name | Type      | Description     |
-| -------- | --------- | ---------- |
-| name (required)  | _string_ | A unique name for the label | 
+| Parameter Name  | Type     | Description                 |
+| --------------- | -------- | --------------------------- |
+| name (required) | _string_ | A unique name for the label |
 
 </TabItem>
 <TabItem value="response">
@@ -286,6 +305,7 @@ Label {
 ```
 DELETE https://console.helium.com/api/v1/labels/:label_id
 ```
+
 Delete a device label, along with all of its device links.
 
 <Tabs
@@ -294,11 +314,11 @@ Delete a device label, along with all of its device links.
   values={[{"label":"Request","value":"request"},{"label":"Response","value":"response"}]}>
 <TabItem value="request">
 
-_Body Parameters_ 
+_Body Parameters_
 
-| Parameter Name | Type      | Description     |
-| -------- | --------- | ---------- |
-| label_id (required)  | _string_ | The UUID of the label to be deleted | 
+| Parameter Name      | Type     | Description                         |
+| ------------------- | -------- | ----------------------------------- |
+| label_id (required) | _string_ | The UUID of the label to be deleted |
 
 </TabItem>
 <TabItem value="response">
@@ -315,7 +335,7 @@ Label {
 404: Not Found
 
 ```json
-{"errors":{"error":["Label not found"]}}
+{ "errors": { "error": ["Label not found"] } }
 ```
 
 </TabItem>
@@ -328,6 +348,7 @@ Label {
 ```
 POST  https://console.helium.com/api/v1/devices/:device_id/labels
 ```
+
 Add Device to Label
 
 <Tabs
@@ -338,15 +359,15 @@ Add Device to Label
 
 _Path Parameters_
 
-| Parameter Name | Type      | Description     |
-| -------- | --------- | ---------- |
-| device_id (required)  | _string_ | UUID of device | 
+| Parameter Name       | Type     | Description    |
+| -------------------- | -------- | -------------- |
+| device_id (required) | _string_ | UUID of device |
 
 _Body Parameters_
 
-| Parameter Name | Type      | Description     |
-| -------- | --------- | ---------- |
-| label (required)  | _string_ | UUID of label | 
+| Parameter Name   | Type     | Description   |
+| ---------------- | -------- | ------------- |
+| label (required) | _string_ | UUID of label |
 
 </TabItem>
 <TabItem value="response">
@@ -367,6 +388,7 @@ Device added to label successfully
 ```
 DELETE  https://console.helium.com/api/v1/devices/:device_id/labels
 ```
+
 Add Device to Label
 
 <Tabs
@@ -377,10 +399,10 @@ Add Device to Label
 
 _Path Parameters_
 
-| Parameter Name | Type      | Description     |
-| -------- | --------- | ---------- |
-| device_id (required)  | _string_ | UUID of device | 
-| label_id (required)  | _string_ | UUID of label | 
+| Parameter Name       | Type     | Description    |
+| -------------------- | -------- | -------------- |
+| device_id (required) | _string_ | UUID of device |
+| label_id (required)  | _string_ | UUID of label  |
 
 </TabItem>
 <TabItem value="response">
