Blockchain API Reference Port (#61)
* complete stats

* stats improvements

* add separator at top stats

* add blocks

* add accounts

* add hotspots

* add cities

* add transactions

* add pending-transactions

* add oracle prices

* add chain variables

* add ouis

* format all api docs

--- a/api/blockchain/stats.mdx
+++ b/api/blockchain/stats.mdx
@@ -5,7 +5,12 @@ sidebar_label: Stats
 slug: /blockchain/stats
 ---
 
+import Tabs from "@theme/Tabs";
+import TabItem from "@theme/TabItem";
+
 # Stats
+
+---
 
 ## Blockchain Stats
 
@@ -13,75 +18,95 @@ slug: /blockchain/stats
 GET https://api.helium.io/v1/stats
 ```
 
-#### Response
-```
+Retrieve basic stats for the blockchain such as total token supply, and average
+block and election times over a number of intervals.
+
+<Tabs
+  block={true}
+  defaultValue="request"
+  values={[{"label":"Request","value":"request"},{"label":"Response","value":"response"}]}>
+<TabItem value="request">
+
+_No Parameters_
+
+</TabItem>
+<TabItem value="response">
+
+200: OK
+
+```json
 {
-    "data": {
-        "token_supply": 43665725.1302733,
-        "state_channel_counts": {
-            "last_week": {
-                "num_packets": 2473044,
-                "num_dcs": 5637970
-            },
-            "last_month": {
-                "num_packets": 8054070,
-                "num_dcs": 19274712
-            },
-            "last_day": {
-                "num_packets": 236788,
-                "num_dcs": 547374
-            }
-        },
-        "election_times": {
-            "last_week": {
-                "stddev": 534.822542840926,
-                "avg": 2144.7836879432625
-            },
-            "last_month": {
-                "stddev": 543.816093344539,
-                "avg": 2154
-            },
-            "last_hour": {
-                "stddev": 42.42640687119285,
-                "avg": 1882
-            },
-            "last_day": {
-                "stddev": 859.488237284275,
-                "avg": 2323.4324324324325
-            }
-        },
-        "counts": {
-            "transactions": 19449205,
-            "hotspots": 4460,
-            "consensus_groups": 11210,
-            "challenges": 6970742,
-            "blocks": 435217
-        },
-        "challenge_counts": {
-            "last_day": 44551,
-            "active": 1375
-        },
-        "block_times": {
-            "last_week": {
-                "stddev": 37.35119910969945,
-                "avg": 59.48209718670077
-            },
-            "last_month": {
-                "stddev": 39.13551465750347,
-                "avg": 59.71646467904705
-            },
-            "last_hour": {
-                "stddev": 13.222930902010502,
-                "avg": 57.40983606557377
-            },
-            "last_day": {
-                "stddev": 54.591247837179495,
-                "avg": 61.43274021352313
-            }
-        }
+  "data": {
+    "token_supply": 43665725.1302733,
+    "state_channel_counts": {
+      "last_week": {
+        "num_packets": 2473044,
+        "num_dcs": 5637970
+      },
+      "last_month": {
+        "num_packets": 8054070,
+        "num_dcs": 19274712
+      },
+      "last_day": {
+        "num_packets": 236788,
+        "num_dcs": 547374
+      }
+    },
+    "election_times": {
+      "last_week": {
+        "stddev": 534.822542840926,
+        "avg": 2144.7836879432625
+      },
+      "last_month": {
+        "stddev": 543.816093344539,
+        "avg": 2154
+      },
+      "last_hour": {
+        "stddev": 42.42640687119285,
+        "avg": 1882
+      },
+      "last_day": {
+        "stddev": 859.488237284275,
+        "avg": 2323.4324324324325
+      }
+    },
+    "counts": {
+      "transactions": 19449205,
+      "hotspots": 4460,
+      "consensus_groups": 11210,
+      "challenges": 6970742,
+      "blocks": 435217
+    },
+    "challenge_counts": {
+      "last_day": 44551,
+      "active": 1375
+    },
+    "block_times": {
+      "last_week": {
+        "stddev": 37.35119910969945,
+        "avg": 59.48209718670077
+      },
+      "last_month": {
+        "stddev": 39.13551465750347,
+        "avg": 59.71646467904705
+      },
+      "last_hour": {
+        "stddev": 13.222930902010502,
+        "avg": 57.40983606557377
+      },
+      "last_day": {
+        "stddev": 54.591247837179495,
+        "avg": 61.43274021352313
+      }
     }
+  }
 }
 ```
+
+</TabItem>
+</Tabs>
+
+---
 
 ## Token Supply
 
@@ -89,13 +114,30 @@ GET https://api.helium.io/v1/stats
 GET https://api.helium.io/v1/stats/token_supply
 ```
 
-#### Parameters
+Returns the circulating token supply in either JSON or raw form.
 
-| param | Type      | Note     |
-| -------- | --------- | ---------- |
-| format  | _String_ | specify `raw` to get a raw number, otherwise returns json |
+<Tabs
+  block={true}
+  defaultValue="request"
+  values={[{"label":"Request","value":"request"},{"label":"Response","value":"response"}]}>
+<TabItem value="request">
 
-#### Response(raw)
-```
+_Path Parameters_
+
+| param             | Type     | Note                                                      |
+| ----------------- | -------- | --------------------------------------------------------- |
+| format (optional) | _string_ | specify `raw` to get a raw number, otherwise returns json |
+
+</TabItem>
+<TabItem value="response">
+
+200: OK
+
+RAWN form of the result when called with `/v1/stats/token_supply?format=raw`
+
+```json
 49450470.73544278
 ```
+
+</TabItem>
+</Tabs>
